force-app/main/default/objects/Quality_Search_Input__mdt/Quality_Search_Input__mdt.object-meta.xml
<CustomObject>
    <description>A logical user input on the Quality Search form (e.g. "email", "birthdate"). Each input can map to multiple Field rows across multiple Objects. Child of Config.</description>
    <label>Quality Search Input</label>
    <pluralLabel>Quality Search Inputs</pluralLabel>
</CustomObject>