force-app/main/default/objects/Quality_Search_Input__mdt/fields/Input_Type__c.field-meta.xml
<CustomField>
    <fullName>Input_Type__c</fullName>
    <description>HTML/LWC input type driving rendering (text, email, tel, date).</description>
    <label>Input Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>text</fullName>
                <default>true</default>
                <label>text</label>
            </value>
            <value>
                <fullName>email</fullName>
            </value>
            <value>
                <fullName>tel</fullName>
            </value>
            <value>
                <fullName>date</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>