force-app/main/default/objects/Quality_Search_Input__mdt/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <description>Qualitative inputs count toward the gate (at least N must be filled before search runs). Filter inputs only narrow.</description>
    <label>Role</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Qualitative</fullName>
            </value>
            <value>
                <fullName>Filter</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>