force-app/main/default/objects/Quality_Search_Input__mdt/fields/UI_Label__c.field-meta.xml
<CustomField>
    <fullName>UI_Label__c</fullName>
    <description>Label shown to the user above the input in the LWC.</description>
    <label>UI Label</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>